--- a/index.html
+++ b/index.html
@@ -260,10 +260,11 @@
         const today = new Date()
         const year = today.getFullYear()
 
-        const copyright = document.querySelector("year")
+        const copyright = document.querySelector(".year")
         copyright.textContent = year
 
       </script>  
     </body>
 
 </html>
+
